# amd_fsr

./: .gitignore  CAS_CS.cpp  CAS_CS.h  CMakeLists.txt  Hash.cpp  Misc.cpp  Misc.h  PostProcCS.cpp  PostProcCS.h  README.md  ShaderCompiler.h  ShaderCompilerHelper.h  ThreadPool.h  VulkanExample.cpp  VulkanExample.h
ffx-cas/: ffx_a.h  ffx_cas.h
libs/vectormath/: vec2d.hpp
libs/vectormath/sse/: matrix.hpp
python/: README.md  ffx_cas.h  main.py  requirements.txt  window.py
python/shader/: CAS.glsl  CAS_Basalt.glsl  EASU.glsl  Lanczos.glsl  OrigCAS.glsl  fragment_shader.glsl  vertex_shader.glsl
rif/: CMakeLists.txt  main.cpp
rif/ImageTools/: ImageTools.h
vulkancpp/: Async.cpp  Async.h  AsyncCache.h  CAS_CS.cpp  Hash.h  PostProcCS.cpp  ShaderCompiler.cpp  ShaderCompilerHelper.cpp  ThreadPool.cpp  VulkanExample.h  VulkanTools.cpp  VulkanTools.h  main.cpp
web/: README.md  glea.js  index.html  script.js
